qr code integration

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 default_envs = wt32-eth01
-extra_configs = ${platformio.core_dir}/lib/MyCreds/MyCreds.ini
+; extra_configs = ${platformio.core_dir}/lib/MyCreds/MyCreds.ini
 ; MyCreds.ini should contain the upload password, stored in <user>/.platformio/lib/MyCreds/MyCreds.ini
-; [common]
-; private_upload_auth = "change_me_upload_password"
+[common]
+private_upload_auth = "change_me_upload_password"
 
 [env]
 ;platform = espressif32
