--- a/data/www/manifest.json
+++ b/data/www/manifest.json
@@ -1,6 +1,6 @@
 {
 	"theme_color": "#8936FF",
-	"background_color": "#2EC6FE",
+	"background_color": "#000000",
 	"icons": [
 		{
 			"purpose": "maskable",
