Core now using pioarduino and ESP-Arduino V3

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ extra_configs = ${platformio.core_dir}/lib/MyCreds/MyCreds.ini
 ;platform = espressif32
 board = wt32-eth01
 framework = arduino
-platform = espressif32@6.8.1
+platform = https://github.com/pioarduino/platform-espressif32.git#develop
+;platform = espressif32@6.8.1
 ;platform = https://github.com/platformio/platform-espressif32.git
 ;platform_packages = framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32#master
 monitor_speed = 115200
@@ -29,19 +30,23 @@ lib_deps =
 	pfeerick/elapsedMillis@^1.0.6
   teemuatlut/TMCStepper@^0.7.3
   olikraus/U8g2@^2.35.15
-  gmag11/QuickEspNow@^0.8.1
+  ;gmag11/QuickEspNow@^0.8.1 Instable! RSSI not working in Arduino 3 
   robtillaart/AS5600@^0.6.1
-  me-no-dev/AsyncTCP@^1.1.1
-  ;mathieucarbou/ESPAsyncWebServer@^3.2.4
-  marian-craciunescu/ESP32Ping@^1.7
+  ;me-no-dev/AsyncTCP@^1.1.1 Outdated for higher Arduino cores
+  ESP32Async/AsyncTCP@^3.4.0
+  ;mathieucarbou/ESPAsyncWebServer@^3.2.4 Outdated for higher Arduino cores
+  ;marian-craciunescu/ESP32Ping@^1.7 Implemented own non-blocking routines
   ;fastled/FastLED@^3.6.0
-  freenove/Freenove WS2812 Lib for ESP32 @ 1.0.5
+  ;freenove/Freenove WS2812 Lib for ESP32 @ 1.0.5  INSTABLE!!!
+  https://github.com/adafruit/Adafruit_NeoPixel.git@^1.12.5
   rweather/Crypto@~0.4.0
-  https://github.com/me-no-dev/ESPAsyncWebServer.git
+  ;https://github.com/me-no-dev/ESPAsyncWebServer.git
+  ESP32Async/ESPAsyncWebServer@^3.7.7
   bblanchon/ArduinoJson@^6.21.4
 ;this is to add the upload authentification password stored in the extra_config file
-upload_flags = --auth=${common.private_upload_auth}
+;upload_flags = --auth=${common.private_upload_auth}
 build_flags = -D DEF_UPLOAD_AUTH='${common.private_upload_auth}'
+monitor_filters = esp32_exception_decoder
 
 [env:wt32-eth01]
 upload_speed = 460800
@@ -49,14 +54,16 @@ upload_speed = 460800
 build_flags = 
   ${env.build_flags}
   -D DEF_HOSTNAME='"testdoor"'
+  -D DEF_LOCKDRIVE=1
 
 [env:wt32-eth01-ota]
 upload_protocol = espota
-upload_port = 192.168.2.136
-monitor_port = socket://192.168.2.136:2222
+upload_port = 192.168.2.186
+monitor_port = socket://192.168.2.186:2222
+upload_flags = --auth=${common.private_upload_auth}
 build_flags = 
   ${env.build_flags}
-  -D DEF_HOSTNAME='"loungedoor"'
+  -D DEF_HOSTNAME='"elabdoor"'
   -D DEF_LOCKDRIVE=1
 
 ; .143 .160
@@ -64,6 +71,7 @@ build_flags =
 upload_protocol = espota
 upload_port = 10.0.0.143
 monitor_port = socket://10.0.0.143:2222
+upload_flags = --auth=${common.private_upload_auth}
 build_flags = 
   ${env.build_flags}
   -D DEF_HOSTNAME='"maindoor"'
@@ -73,6 +81,17 @@ build_flags =
 upload_protocol = espota
 upload_port = 10.0.0.160
 monitor_port = socket://10.0.0.160:2222
+upload_flags = --auth=${common.private_upload_auth}
+build_flags = 
+  ${env.build_flags}
+  -D DEF_HOSTNAME='"loungedoorold"'
+  -D DEF_LOCKDRIVE=1
+
+[env:wt32-eth01-ota-loungedoor]
+upload_protocol = espota
+upload_port = 10.0.0.131
+monitor_port = socket://10.0.0.131:2222
+upload_flags = --auth=${common.private_upload_auth}
 build_flags = 
   ${env.build_flags}
   -D DEF_HOSTNAME='"loungedoor"'
